--- a/compose.yml
+++ b/compose.yml
@@ -1,17 +1,24 @@
 services:
   node:
-    build: .
+    build:
+      context: .
+      target: node_base
+    container_name: nightwatch_node
     volumes:
       - .:/usr/src/app
+      - /usr/src/app/node_modules
     depends_on:
       - selenium
     networks:
       - nightwatch-net
     stdin_open: true
     tty: true
+    env_file:
+      - .env
 
   selenium:
     image: selenium/standalone-chrome
+    container_name: nightwatch_selenium
     networks:
       - nightwatch-net
     ports:
