--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,22 +14,23 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
 
       - name: Log in to GitHub Container Registry
         run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ secrets.GHCR_USERNAME }} --password-stdin
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
+          target: node_base
           push: true
           tags: ghcr.io/${{ secrets.GHCR_USERNAME }}/node-selenium:latest
 
@@ -42,7 +43,7 @@ jobs:
         run: docker-compose -f compose.yml up --build -d
 
       - name: Run tests
-        run: docker-compose -f compose.yml exec node npm run test:nightwatch
+        run: docker-compose -f compose.yml exec -it node npm run test:nightwatch
 
       - name: Tear down Docker Compose
         if: always()
