--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         run: docker compose up --build -d
 
       - name: Run tests
-        run: docker compose exec -it node npm run test:nightwatch-report
+        run: docker compose exec -it node npm run test:nightwatch:report
 
       - name: Archive results
         uses: actions/upload-artifact@v4
