--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">= 18.0"
   },
   "scripts": {
-    "test:nightwatch": "node -r dotenv-safe/config ./node_modules/.bin/nightwatch --config ./nightwatch.conf.js"
+    "test:nightwatch": "node -r dotenv-safe/config ./node_modules/.bin/nightwatch --config ./nightwatch.conf.js",
     "test:nightwatch:report": "node -r dotenv-safe/config ./node_modules/.bin/nightwatch --config ./nightwatch.conf.js --reporter=junit --reporter=html"
   },
   "dependencies": {
