feat: update configuration and documentation

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NIGHTWATCH_OUTPUT=
+NIGHTWATCH_OUTPUT="var/nightwatch"
 
-WEBDRIVER_HOSTNAME=
-WEBDRIVER_PORT=
+WEBDRIVER_HOSTNAME="selenium"
+WEBDRIVER_PORT="4444"
