--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,8 @@ jobs:
           target: node_base
           push: true
           tags: ${{ env.REGISTRY }}/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME}}:${{ github.ref_name }}-${{ github.sha }}
+          labels: |
+            org.opencontainers.image.source https://github.com/${{ github.repository }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
