--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,14 +8,20 @@ on:
       - 'tests/**'
       - '.github/workflows/test.yml'
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: node-selenium
+
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: ghcr.io/${{ github.actor }}/node-selenium:latest
+    container: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.IMAGE_NAME}}:latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - run: npm ci
 
       - name: Run tests
         run: npm run test:nightwatch:report
