--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,14 +8,10 @@ on:
       - 'tests/**'
       - '.github/workflows/test.yml'
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: node-selenium
-
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.IMAGE_NAME}}:latest
+    container: ghcr.io/${{ github.actor }}/node-selenium:latest
 
     steps:
       - name: Checkout code
